feat: Generate new module auto-generate bash script
