# docs/swagger.json
@@ -15,16 +15,16 @@
     "host": "localhost",
     "basePath": "/api/v1",
     "paths": {
-        "/v1/product": {
+        "/v1/example": {
             "get": {
-                "description": "Get list of product.",
+                "description": "Get list of example.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "Examples"
                 ],
-                "summary": "Get list of product.",
+                "summary": "Get list of example.",
                 "responses": {
                     "200": {
                         "description": "success",
@@ -39,7 +39,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/dto.ProductResponse"
+                                                "$ref": "#/definitions/dto.ExampleResponse"
                                             }
                                         }
                                     }
@@ -56,22 +56,22 @@
                 }
             },
             "post": {
-                "description": "Create new product data.",
+                "description": "Create new example data.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "Examples"
                 ],
-                "summary": "Create new product data.",
+                "summary": "Create new example data.",
                 "parameters": [
                     {
-                        "description": "Product request",
+                        "description": "Example request",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.ProductRequest"
+                            "$ref": "#/definitions/dto.ExampleRequest"
                         }
                     }
                 ],
@@ -87,7 +87,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/dto.ProductResponse"
+                                            "$ref": "#/definitions/dto.ExampleResponse"
                                         }
                                     }
                                 }
@@ -103,20 +103,20 @@
                 }
             }
         },
-        "/v1/product/{id}": {
+        "/v1/example/{id}": {
             "get": {
-                "description": "Get single product.",
+                "description": "Get single example.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "Examples"
                 ],
-                "summary": "Get single product.",
+                "summary": "Get single example.",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Product ID",
+                        "description": "Example ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -134,7 +134,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/dto.ProductResponse"
+                                            "$ref": "#/definitions/dto.ExampleResponse"
                                         }
                                     }
                                 }
@@ -150,18 +150,18 @@
                 }
             },
             "delete": {
-                "description": "Get single product.",
+                "description": "Get single example.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "Examples"
                 ],
-                "summary": "Get single product.",
+                "summary": "Get single example.",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Product ID",
+                        "description": "Example ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -183,22 +183,22 @@
                 }
             },
             "patch": {
-                "description": "Update existing product data",
+                "description": "Update existing example data",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "Examples"
                 ],
-                "summary": "Update existing product data",
+                "summary": "Update existing example data",
                 "parameters": [
                     {
-                        "description": "Product request",
+                        "description": "Example request",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.ProductRequest"
+                            "$ref": "#/definitions/dto.ExampleRequest"
                         }
                     }
                 ],
@@ -214,7 +214,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/dto.ProductResponse"
+                                            "$ref": "#/definitions/dto.ExampleResponse"
                                         }
                                     }
                                 }
@@ -232,7 +232,7 @@
         }
     },
     "definitions": {
-        "dto.ProductRequest": {
+        "dto.ExampleRequest": {
             "type": "object",
             "required": [
                 "name",
@@ -247,7 +247,7 @@
                 }
             }
         },
-        "dto.ProductResponse": {
+        "dto.ExampleResponse": {
             "type": "object",
             "required": [
                 "name",
